# Aubs

./: AUBS_MIGRATION_AUDIT.md  CHANGELOG.md  CNAME  GITHUB_UPLOAD.md  MEMORY_V1_VALIDATION.md  MILESTONE_0_LEDGER.md  QUICKSTART.md  README.md  RELEASE_SUMMARY.txt  aubs-app.html  build-info.js  fonts.css  index (14).html  index.html  manifest.json  sw.js
app/: aubs-shell.html  fastengine-test.html
capacitor-shell/: .gitignore  capacitor.config.json  copy-web.sh  package.json
capacitor-shell/native/cpp/: CMakeLists.txt  aubs_llama.cpp
core/: browser-assets.js
docs/: ARCHITECTURE_UPDATED.md  AUBS_ANDROID_NATIVE_BRIDGE_P1.md  AUBS_ANDROID_NATIVE_LLAMA_P2.md  AUBS_CAC_M1.md  AUBS_COMPLETION_MATRIX.md  AUBS_CONSTITUTIONAL_INTEGRATION_M13.md  AUBS_CTF_M10.md  AUBS_DECISION_GATE_0_BUNDLE_CONTRACT.md  AUBS_DECISION_REPLAY_M7.md  AUBS_GEL_M2.md  AUBS_KERNEL_M3.md  AUBS_KERNEL_M4.md  AUBS_LOCAL_NATIVE_PROVIDER.md  AUBS_MIGRATION_PLAN.md  AUBS_MOBILE_AUTO_UPDATE.md  AUBS_OPENAI_REFERENCE_M8.md  AUBS_PLANNER_M12.md  AUBS_PROVIDERS_M5.md  AUBS_PROVIDER_ELIGIBILITY_M6.md  AUBS_RUNTIME_ARCHITECTURE.md  AUBS_RUNTIME_FIRST_ARCHITECTURE.md  AUBS_SKILLS_M11.md  AUBS_TRUST_OS_ARCHITECTURE.md  AUBS_TRUST_OS_ROADMAP.md  AUBS_TSM_M9.md  AUBS_VERIFIED_GROUNDING_V2.md  BUG_REGISTER.md  CONVERSATION_CONTROLLER_DOCS.md  EXECUTION_ORDER.md  FASTENGINE_DOCS.md  FOUNDER_ACCEPTANCE.md  FOUNDER_DEVICE_REPORT.md  FOUNDER_TEST_LOG.md  INDEX.md  MODEL_ADAPTER_DOCS.md  OUTPUT_VALIDATOR_DOCS.md  PERFORMANCE_REPORT.md  PHASE_B_ROADMAP.md  PROMPT_BUILDER_DOCS.md  RISK_REGISTER.md  (+6 more)
spine/: ledger.js  spine.js
test-utilities/: SECTION8A_TESTING_REPORT.md
tests/: CHECKPOINT_0.6_DEVICE_VALIDATION.md  CHECKPOINT_0_DEVICE_AUDIT_FIXES.md  CITATION_RELIABILITY_FINDINGS.md  CITATION_RELIABILITY_TEST.md  LIVE_GROUNDING_DIAGNOSTIC.md  RELEVANCE_GUARD_DESIGN.md  ROUTER_CORE_V1.md  SAFETY_GATE_HARDENING.md  citation-harness.html  feel-set.v1.json  golden-set.citations.v1.json  (+69 more)
(+123 files in other folders)
